Fix tabbed layout, tools do not need to be wrapped in toolbar groups anymore

--- a/webappbuilder/themes/tabbed/app.css
+++ b/webappbuilder/themes/tabbed/app.css
@@ -47,8 +47,9 @@ html, body {
 body {
   font-family: 'Roboto', sans-serif;
 }
-.map {
+#map {
   position: absolute;
+  top: 64px;
   height: calc(100% - 64px);
 }
 #edit-tool-panel {
